apps/verdaccio/verdaccio-dp.yml
apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: verdaccio
  namespace: balhau-dev
  labels:
    version: 0.0.3
    app: verdaccio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verdaccio
  template:
    metadata:
      labels:
        app: verdaccio
    spec:
      containers:
      - name: verdaccio
        image: 10.108.252.69:5000/balhau/verdaccio:armv6-0.0.3
        resources:
          requests:
            memory: "128Mi"
            cpu: "800m"
            
        volumeMounts:
        - name: verdaccio-store
          mountPath: /root/.config/verdaccio/storage
        ports:
        - containerPort: 4873
          name: registry
          protocol: TCP
      volumes:
      - name: verdaccio-store
        persistentVolumeClaim:
          claimName: verdaccio-pvc
