apps/verdaccio/verdaccio-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: verdaccio-ingress
  namespace: balhau-dev
spec:
  tls:
  - hosts:
    - verdaccio.balhau.net
  rules:
  - host: verdaccio.balhau.net
    http:
      paths:
      - path: /
        backend:
          serviceName: verdaccio
          servicePort: 4873
